--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>demo-repo</title>
-</head>
-<body>
-    <H1>Aula de git e GitHub</H1> <br>
+  </head>
+  <body>
+    <h1>Aula de git e GitHub</h1>
+    <br />
     <p>Parágrafo com conteúdo qualquer!</p>
-</body>
+    <button
+      type="button"
+      onclick="location.href='https://www.youtube.com/watch?v=RGOj5yH7evk'"
+    >
+      Youtube Link
+    </button>
+  </body>
 </html>
